Home page css work

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,13 +8,32 @@
 
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/home.css">
 
     <script type="module" src="scripts/index.js"></script>
 </head>
 
 <body>
     <header id="main-header"></header>
-    <h1 class="heading">Madison Grant Photo</h1>
+    <section class="hero">
+        <img src="http://via.placeholder.com/800x400" alt="hero image" class="hero-img">
+        <h1 class="heading">Madison Grant Photo</h1>
+    </section>
+    <section class="about">
+        <h2>About Me</h2>
+        <p class="description">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
+            velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis blanditiis
+            eaque,
+            consectetur tempora molestiae consequuntur explicabo fugiat quo enim.
+        </p>
+        <img src="http://via.placeholder.com/400x600" alt="Photo of Madison" class="about-img">
+    </section>
+    <section>
+        <h2>Testimonials</h2>
+    </section>
     <footer id="main-footer"></footer>
 </body>
 
