Home page layout/css

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,7 +22,7 @@
         </section>
         <section class="about">
             <h2>About Me</h2>
-            <p class="description">
+            <p class="about-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
                 velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing
@@ -37,9 +37,29 @@
         <section class="testimonials">
             <h2>Testimonials</h2>
             <div class="testimonials-grid">
-                <img src="http://via.placeholder.com/400x600" alt="testimonial 1">
-                <img src="http://via.placeholder.com/400x600" alt="testimonial 2">
-                <img src="http://via.placeholder.com/400x600" alt="testimonial 3">
+                <div class="testimonial-card">
+                    <img src="http://via.placeholder.com/400x600" alt="testimonial 3">
+                    <p class="testimonial-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia earum
+                        culpa, consequatur aspernatur
+                        similique quis? Earum perferendis, voluptatum, optio praesentium nihil pariatur corrupti quidem
+                        beatae, labore autem facere voluptates excepturi!</p>
+                </div>
+                <div class="testimonial-card">
+                    <img src="http://via.placeholder.com/400x600" alt="testimonial 3">
+                    <p class="testimonial-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia earum
+                        culpa, consequatur aspernatur
+                        similique quis? Earum perferendis, voluptatum, optio praesentium nihil pariatur corrupti quidem
+                        beatae, labore autem facere voluptates excepturi!</p>
+                </div>
+                <div class="testimonial-card">
+                    <img src="http://via.placeholder.com/400x600" alt="testimonial 3">
+                    <p class="testimonial-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia earum
+                        culpa, consequatur aspernatur
+                        similique quis? Earum perferendis, voluptatum, optio praesentium nihil pariatur corrupti quidem
+                        beatae, labore autem facere voluptates excepturi! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Maiores recusandae asperiores, dicta rerum, corporis ipsa obcaecati voluptas,
+                        illo assumenda iure soluta odio eum. Accusantium nemo numquam illum vero dolorem vitae.</p>
+                </div>
             </div>
         </section>
 
