--- a/frontend/src/pages/pricing.html
+++ b/frontend/src/pages/pricing.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Madison Grant Photo | Pricing</title>
-
+    <link rel="stylesheet" href="../styles/pricing.css">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/large.css">
     <script type="module" src="../scripts/index.js"></script>
@@ -11,6 +11,9 @@
 <body>
     <header id="main-header"></header>
     <h1 class="heading">Pricing</h1>
+
+    <div 
+    <img src="https://placekitten.com/300/250" alt="placeholder photo" class="centered">
     <footer id="main-footer"></footer>
 </body>
 
