Home page layout

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,17 +22,24 @@
         </section>
         <section class="about">
             <h2>About Me</h2>
-            <p class="about-text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
-                velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing
-                elit.
-                Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis
-                blanditiis
-                eaque,
-                consectetur tempora molestiae consequuntur explicabo fugiat quo enim.
-            </p>
-            <img src="http://via.placeholder.com/400x600" alt="Photo of Madison" class="about-img">
+            <div class="about-grid">
+                <img src="http://via.placeholder.com/400x600" alt="Photo of Madison" class="about-img">
+                <p class="about-text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
+                    velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur
+                    adipisicing
+                    elit.
+                    Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis
+                    blanditiis
+                    eaque,
+                    consectetur tempora molestiae consequuntur explicabo fugiat quo enim. Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Neque ratione voluptates numquam tenetur rerum. Modi eaque reiciendis
+                    minima, maiores omnis porro tempora animi dignissimos consectetur sint recusandae dolorem nihil
+                    doloribus!
+                </p>
+
+            </div>
         </section>
         <section class="testimonials">
             <h2>Testimonials</h2>
@@ -53,12 +60,18 @@
                 </div>
                 <div class="testimonial-card">
                     <img src="http://via.placeholder.com/400x600" alt="testimonial 3">
-                    <p class="testimonial-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia earum
-                        culpa, consequatur aspernatur
-                        similique quis? Earum perferendis, voluptatum, optio praesentium nihil pariatur corrupti quidem
-                        beatae, labore autem facere voluptates excepturi! Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maiores recusandae asperiores, dicta rerum, corporis ipsa obcaecati voluptas,
-                        illo assumenda iure soluta odio eum. Accusantium nemo numquam illum vero dolorem vitae.</p>
+                    <div class="overlay">
+                        <p class="testimonial-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+                            earum
+                            culpa, consequatur aspernatur
+                            similique quis? Earum perferendis, voluptatum, optio praesentium nihil pariatur corrupti
+                            quidem
+                            beatae, labore autem facere voluptates excepturi! Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Maiores recusandae asperiores, dicta rerum, corporis ipsa obcaecati
+                            voluptas,
+                            illo assumenda iure soluta odio eum. Accusantium nemo numquam illum vero dolorem vitae.</p>
+
+                    </div>
                 </div>
             </div>
         </section>
