--- a/frontend/src/pages/pricing.html
+++ b/frontend/src/pages/pricing.html
@@ -10,9 +10,75 @@
 
 <body>
     <header id="main-header"></header>
-    <h1 class="heading">Pricing</h1>
+    <!-- <h1 class="heading">Pricing</h1> -->
+    <section class="heading">
+        <div class="image-container">
+            <img src="https://placekitten.com/700/200" alt="placeholder photo">
+            <div class="image-text">Pricing</div>
+        </div>
 
-    <div 
+    </section>
+
+
+<!-- ---------------- ENGAGEMENT PRICING SECTION ---------------- -->
+    <section class="engagements">
+        <img class="centered" src="https://placekitten.com/160/288" alt="placeholder">
+
+        <h2 class="pricing-section-title">Engagements</h2>
+       
+        <p class="pricing-paragraphs">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
+            velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit.
+            Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis
+            blanditiis
+            eaque,
+            consectetur tempora molestiae consequuntur expli</p>
+
+        <hr class="pricing-packages-divider">
+        <h2 class="pricing-amount">$200</h2>
+
+
+    </section>
+
+
+<!-- ---------------- WEDDING 1 PRICING SECTION ---------------- -->
+<section class="wedding1">
+    <h2 class="pricing-section-title">Wedding Package A</h2>
+    <h2 class="pricing-amount">$700</h2>
+    <p class="pricing-paragraphs">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
+        velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit.
+        Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis
+        blanditiis
+        eaque,
+        consectetur tempora molestiae consequuntur expli</p>
+    <img class="centered" src="https://placekitten.com/160/288" alt="placeholder">
+
+
+
+</section>
+
+
+<!-- ---------------- ENGAGEMENT PRICING SECTION ---------------- -->
+<section class="engagements">
+    <h2 class="pricing-section-title">Engagements</h2>
+    <h2 class="pricing-amount">$200</h2>
+    <p class="pricing-paragraphs">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Eaque non quia expedita quam laborum! Sequi vitae temporibus provident nisi cupiditate, quasi in ex,
+        velit et eveniet corrupti a, repellendus laborum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit.
+        Harum nihil ratione maiores laborum iusto explicabo error alias architecto. Nesciunt perferendis
+        blanditiis
+        eaque,
+        consectetur tempora molestiae consequuntur expli</p>
+    <img class="centered" src="https://placekitten.com/160/288" alt="placeholder">
+
+
+
+</section>
+    
     <img src="https://placekitten.com/300/250" alt="placeholder photo" class="centered">
     <footer id="main-footer"></footer>
 </body>
