--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/png">
 
     <script type="module" src="scripts/index.js"></script>
 </head>
