--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/large.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/png">
 
     <script type="module" src="../scripts/index.js"></script>
 </head>
