--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,17 +1,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madison Grant Photo | Contact</title>
+    <title>Madison Grant Photo | Portfolio</title>
 
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/large.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/png">
 
     <script type="module" src="../scripts/index.js"></script>
 </head>
 
 <body>
     <header id="main-header"></header>
-    <h1 class="heading">Contact</h1>
+    <h1 class="heading">Portfolio</h1>
     <footer id="main-footer"></footer>
 </body>
 
