--- a/pages/template.html
+++ b/pages/template.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/large.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/png">
     <script type="module" src="../scripts/index.js"></script>
 </head>
 
