--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/home.css">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="public/favicon.ico" type="image/png">
 
     <script type="module" src="scripts/index.js"></script>
 </head>
@@ -79,6 +79,23 @@
 
     </main>
     <footer id="main-footer"></footer>
+
+    <script>
+        // Function to fetch and insert HTML snippets
+        async function insertSnippets() {
+            const headerResponse = await fetch('snippets/header.html');
+            const footerResponse = await fetch('snippets/footer.html');
+
+            const headerHTML = await headerResponse.text();
+            const footerHTML = await footerResponse.text();
+
+            document.getElementById('main-header').innerHTML = headerHTML;
+            document.getElementById('main-footer').innerHTML = footerHTML;
+        }
+
+        // Call the function to insert snippets when the page loads
+        insertSnippets();
+    </script>
 </body>
 
 </html>
