--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -83,6 +83,22 @@
 
     <img src="https://placekitten.com/300/250" alt="placeholder photo" class="centered">
     <footer id="main-footer"></footer>
+    <script>
+        // Function to fetch and insert HTML snippets
+        async function insertSnippets() {
+            const headerResponse = await fetch('../snippets/header.html');
+            const footerResponse = await fetch('../snippets/footer.html');
+
+            const headerHTML = await headerResponse.text();
+            const footerHTML = await footerResponse.text();
+
+            document.getElementById('main-header').innerHTML = headerHTML;
+            document.getElementById('main-footer').innerHTML = footerHTML;
+        }
+
+        // Call the function to insert snippets when the page loads
+        insertSnippets();
+    </script>
 </body>
 
 </html>
